[gd_scene load_steps=9 format=3 uid="uid://w0c7yrgk4dp"]

[ext_resource type="Script" path="res://cards/instance/card_instance.gd" id="1_7k524"]
[ext_resource type="Texture2D" uid="uid://s4phd8i0v6yq" path="res://textures/card/card_front.png" id="2_86rgc"]
[ext_resource type="Script" path="res://cards/instance/card_visuals.gd" id="2_dcn7u"]
[ext_resource type="Texture2D" uid="uid://dxe8tdbbf13su" path="res://textures/card/card_back.png" id="3_ma3a7"]

[sub_resource type="Animation" id="Animation_sf2eq"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_rt16x"]
resource_name = "spin"
length = 0.5085
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.0666667, -0.0351202, 1e-05, -0.0333333, 0.47427, 0.1, 0.737518, 1, -0.266667, -0.0770007, 0.25, 0),
"times": PackedFloat32Array(0, 0.133333, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.0666667, 0.0438426, 1.1, -0.0666667, -0.0381336, 0.0333333, -0.0726776, 1, -0.2, 0.0243186, 0.25, 0),
"times": PackedFloat32Array(0, 0.133333, 0.5)
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.133333, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_on_spin_middle"
}, {
"args": [],
"method": &"_on_spin_finished"
}]
}

[sub_resource type="Animation" id="Animation_x5gj0"]
resource_name = "spin_x2"
length = 0.722
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.0666667, -0.0351202, 1e-05, -0.0333333, 0.47427, 0.0722347, 0.829808, 1, -0.0277653, -0.496423, 0.0722347, -0.665817, 1e-05, -0.0610986, 0.823534, 0.0722347, 0.792165, 1, -0.266667, -0.0770007, 0.25, 0),
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.366667, 0.7)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.10064, 0.0104268, 1.1, -0.0326932, -0.0554389, 0.0333333, -0.0726776, 1, -0.1, 0.0320572, 0.0673068, 0.0131576, 1.1, -0.0326933, -0.0718234, 0.0333333, -0.0726776, 1, -0.2, 0.0243186, 0.25, 0),
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.366667, 0.7)
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.133333, 0.266667, 0.366667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"_on_spin_middle"
}, {
"args": [],
"method": &"_on_spin_finished"
}, {
"args": [],
"method": &"_on_spin_middle"
}, {
"args": [],
"method": &"_on_spin_finished"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3cio1"]
_data = {
"RESET": SubResource("Animation_sf2eq"),
"spin": SubResource("Animation_rt16x"),
"spin_x2": SubResource("Animation_x5gj0")
}

[node name="CardInstance" type="Control"]
custom_minimum_size = Vector2(80, 110)
layout_mode = 3
anchors_preset = 0
offset_right = 80.0
offset_bottom = 110.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_7k524")

[node name="CardCenter" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)

[node name="CardVisuals" type="CanvasGroup" parent="CardCenter" node_paths=PackedStringArray("card_front", "card_back", "animation_player")]
script = ExtResource("2_dcn7u")
card_front = NodePath("CardFrontSprite")
card_back = NodePath("CardBackSprite")
animation_player = NodePath("AnimationPlayer")

[node name="CardFrontSprite" type="Sprite2D" parent="CardCenter/CardVisuals"]
texture = ExtResource("2_86rgc")

[node name="CardBackSprite" type="Sprite2D" parent="CardCenter/CardVisuals"]
visible = false
texture = ExtResource("3_ma3a7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CardCenter/CardVisuals"]
libraries = {
"": SubResource("AnimationLibrary_3cio1")
}

[connection signal="hovered" from="." to="CardCenter/CardVisuals" method="_on_card_instance_hovered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="unhovered" from="." to="CardCenter/CardVisuals" method="_on_card_instance_unhovered"]
